# bobs_blink_box

./: README.md  blinkbox.sh  example.launcher.sh  launcher.sh  pyproject.toml
blinkbox/: __init__.py  __main__.py  app.py  config.py
blinkbox/tools/: __init__.py  device.py
blinkbox/ui/: __init__.py  logo.py  tui.py
